# zenbook-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start_backend.sh  verify_env.py
alembic/: env.py
alembic/versions/: 2d1f3f8c2e2b_split_business_hours_into_am_pm.py  2e9bf0f7b35c_remove_schedule_exceptions.py  5f6c0b7b8f2c_replace_quota_with_half_day_limits.py  7d3c4a6b9e8f_store_weekday_as_text.py  8af5d3f44c5d_add_technician_quota_limits.py  9b7e1f2bb23c_add_rule_date_to_business_hours.py  a3dbf6a5d4c7_switch_cancel_to_no_show.py  b3f4d2b67c1a_add_user_default_location_and_service_weight.py  c38e722ebf4e_init_check.py  d2514b2c1f2e_add_technician_weight.py
src/: __init__.py
src/core/: config.py  database.py  deps.py  exceptions.py  security.py
src/modules/: __init__.py
src/modules/appointments/: __init__.py  models.py  router.py  schemas.py  service.py
src/modules/auth/: router.py  schemas.py  wechat.py
src/modules/catalog/: __init__.py  admin_router.py  models.py  router.py  schemas.py
src/modules/schedule/: __init__.py  admin_router.py  models.py  router.py  schemas.py  service.py
src/modules/users/: admin_router.py  models.py  router.py  schemas.py
src/shared/: __init__.py  enums.py  models.py  schemas.py  ulid.py
tests/: conftest.py  test_admin_catalog_schedule.py  test_auth_wechat.py  test_database_url.py  test_schedule_and_appointments.py
